# SHARK-Runtime

./: .gitmodules  404.html  CMakeLists.txt  index.html  pip-release-links.html  sitemap.xml
.github/workflows/: build_package.yml  oneshot_candidate_release.yml  schedule_candidate_release.yml  sync.yml  validate_and_publish_release.yml
bindings/: index.html
bindings/c-api/: index.html
bindings/python/: index.html
bindings/tensorflow-lite/: index.html
blog/: index.html
blog/2021-07-19-tflite-tosa/: index.html
blog/2021-10-13-mmt4d/: index.html
blog/2021-10-15-cuda-backend/: index.html
build_tools/bazel_to_cmake/: bazel_to_cmake_targets.py
build_tools/cmake/: FindoneCCL.cmake  iree_check_test.cmake  iree_copts.cmake  iree_llvm.cmake
build_tools/python_deploy/: build_linux_packages.sh  build_macos_packages.sh  build_windows.ps1  create_version.ps1  pypi_deploy_requirements.txt
building-from-source/: index.html
building-from-source/android/: index.html
building-from-source/getting-started/: index.html
building-from-source/ios/: index.html
building-from-source/python-bindings-and-importers/: index.html
building-from-source/riscv/: index.html
community/: index.html
community/blog/: index.html
community/tags/: index.html
compiler/: setup.py
deployment-configurations/: index.html
deployment-configurations/bare-metal/: index.html
deployment-configurations/cpu/: index.html
deployment-configurations/gpu-cuda-rocm/: index.html
deployment-configurations/gpu-vulkan/: index.html
developers/: index.html
developers/usage-best-practices/: index.html
developers/vulkan-environment-setup/: index.html
experimental/hal/: allocator_caching.c
experimental/level_zero/: CMakeLists.txt  config.h.in  direct_command_buffer.c  lit.cfg.py  (+11 more)
extensions/: index.html
getting-started/: index.html
guides/: index.html
reference/: index.html
runtime/: setup.py
runtime/src/iree/testing/vulkan/: CMakeLists.txt  iree-run-module-vulkan-gui-main.cc  vulkan_gui_util.cc  vulkan_gui_util.h
search/: search_index.json
tools/: BUILD  CMakeLists.txt  iree-e2e-matmul-test.c  iree-run-module-multi-device-main.cc
(+316 files in other folders)
